# bsp_viewer

./: .gitignore  ISSUES.md  Makefile.am  README.md  autogen.sh  configure.ac  maps.txt
docs/: ISSUES.md  REFERENCES.md  TODO.md
maps/: gothic.bsp  gothic.map  info  test.bsp  test.map
resources/maps/: test.bsp
src/: bsp.c  bsp.h  error.c  error.h  main.c
src/options/: options.c  options.h
